--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "graphql-express",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "server.js",
-    "scripts": {
+  "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,9 +12,13 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.36.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
